Update Font Awesome and Add some CSS to define layout better

--- a/gulp/scss/fontawesome5/fontawesome.scss
+++ b/gulp/scss/fontawesome5/fontawesome.scss
@@ -14,11 +14,10 @@
 @import 'stacked';
 @import 'icons';
 @import 'screen-reader';
-
-@import 'fa-brands';
-@import 'fa-regular';
-@import 'fa-solid';
-/*
-@import 'fa-light';
-
-*/
+ 
+@import 'brands';
+@import 'regular';
+@import 'solid';
+ /*
+ @import 'light';
+ */
