--- a/gulp/scss/powderkeg/site/_pages.scss
+++ b/gulp/scss/powderkeg/site/_pages.scss
@@ -21,9 +21,66 @@
 		}
 	}
 
-
-
 }
+
+/**
+ * SINGLE PARTY PAGE
+ */
+#party-page 					{ display: flex; height: 100vh;
+
+	#party-sidebar 				{ background-color: $almost-black; color: $graaay; padding: 15px; height: 100vh; overflow: auto; width: 220px;
+		#party-nav 				{ 
+			.menu-item 			{ cursor: pointer; font-size: 1.6rem; margin-bottom:4px;
+				i 				{ margin-right: 4px; }
+			}
+
+			.menu-section 		{ font-size: 1.8rem; margin-top: 20px; margin-bottom: 6px;
+				
+			}
+		}
+	}
+	
+
+	#party-chat 				{ flex: 1; padding: 15px; display: flex; flex-direction: column;
+		#chat-message-area 		{ height: 100%; overflow: auto; flex: 1; position: relative;
+			.chat-message-align	{ position: absolute; bottom: 0; width: 100%; }
+
+			.chat-date-hr 		{ margin: 20px 0; width: 100%; line-height: 1rem; position: relative; outline: 0; border: 0; text-align: center; height: 1.5rem;
+				&:before 		{ content: ''; position: absolute; left: 0; top: 50%; width: 100%; height: 1px;
+					background: linear-gradient(to right, transparent, $graaay, transparent);
+				}
+
+				&:after 		{ content: attr(data-content); position: relative; display: inline-block; color: $almost-black; padding: 0 10px; line-height: 1rem; font-size: 1.5rem; font-weight: bold; background-color: $white; }
+
+			}
+
+			.chat-message 		{ display: flex; margin-bottom: 10px;
+				.chat-image 	{ width: 32px;
+					i 			{ font-size: 3rem; }
+				}
+
+				.chat-content 	{ flex: 1; 
+					.chat-info 	{ font-size: 1.4rem; line-height: 1;
+						.time 	{ font-size: 1.3rem; color: $graaay; }
+					}
+					.chat-text 	{ font-size: 1.4rem;
+
+					}
+				}
+			}
+		}
+
+		#chat-send-message 		{ 
+			.form-control 		{ font-size: 1.6rem; border-color: $degrees-of-gray; }
+			.send-btn 			{ background-color: $white; border-color: $degrees-of-gray; }
+		}
+	}
+
+	#party-gamearea 			{ width: 640px; overflow: auto;
+
+	}
+}
+
 
 /**
  * DEFAULT PAGES
@@ -49,114 +106,3 @@ body.archive,
 body.category					{ 
 	
 }
-
-/**
- * SINGLE POST
- */
-body.single						{
-
-	#featured 					{ padding-top: 65vh; height: 100vh;
-		.inside-shadow 			{ background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 40%,rgba(0,0,0,0.8) 100%); box-shadow: inset 0px 0px 200px 100px rgba(0, 0, 0, 0.3); position: absolute; width: 100%; top: 0; bottom: 0; }
-		h1 						{ margin: 0; }
-		h6 						{ color: $white;
-			a 					{ color: $white; text-decoration: underline;
-				&.visited 		{ color: $white; }
-			}
-		}
-
-		.featured-title 		{ position: absolute; width: 100%; padding: 0 15px; left: 0; bottom: 250px; }
-
-		#map 					{ background-color: $white; background-position: top center; box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3); position: absolute; bottom: -50px; left: 50%; margin-left: -100px; width: 200px; height: 200px; border-radius: 50%; z-index: 11; }
-	}
-
-	#article 					{ padding-top: 30px; position: relative; }
-	#progress-background 		{ background: linear-gradient(to right, rgba(140,0,7,1) 0%,rgba(44,201,255,1) 100%); position: absolute; left: 0; top: 0; z-index: 10; width: 100%; height: 5px; }
-
-	#progress-reveal 			{ background-color: white; position: absolute; right: 0; top: 0; z-index: 10; width: 100%; height: 5px; }
-
-	.article-share 				{ border-bottom: 1px solid $light-gray; padding: 50px 0;
-		.tag-wrap,
-		.share-wrap 			{ display: inline-block; vertical-align: middle;
-			p.label 			{ display: inline-block; font-weight: bold; margin: 0; margin-right: 10px; vertical-align: middle; }
-			div 				{ display: inline-block; vertical-align: middle; }
-		}
-
-		.share-wrap 			{ padding-right: 50px; }
-		.tag-wrap 				{ 
-			.list-tags 			{
-				p 				{ margin: 0; }
-			}
-		}
-	}
-
-	.article-author 			{ padding: 50px 0;
-		img, h3 				{ display: inline-block; vertical-align: middle; margin: 0; }
-		img 					{ border-radius: 50%; width: 100px; height: 100px; margin-right: 30px; }
-		a.btn 					{ margin-left: 15px; width: 260px;
-			@media (max-width: $screen-sm-max)  { margin-left: 0; }
-		}
-	}
-
-	.article-comments 			{ 
-		h2 						{ text-align: center; }
-
-		ol 						{ padding: 0; }
-
-		.comment-list 			{
-			img.avatar 			{ width: 75px; height: 75px; margin-right: 15px; }
-
-			//target all comments
-			li.comment 			{ border: 1px solid $light-gray; list-style: none; padding: 20px;
-				table td 		{ vertical-align: top;} 
-
-				.comment-author { margin-bottom: 20px;
-					cite 		{ font-family: $header-font; color: $h2blue; font-size: 3rem; font-style: normal;
-						a 		{ color: $h2blue; text-decoration: none;}
-					}
-					span.says 	{ display: none; }
-					span.date 	{ display: block; font-size: 1.5rem; margin-top: -5px; }
-				}
-
-				.comment-reply-link { font-size: 1.5rem; font-weight: bold;
-					&:visited 	{ color: $red; }
-				}
-
-				.comment-awaiting-moderation { color: $red; display: block; }
-
-				/* User Edit Comment Form */
-				.sce-textarea 	{ 
-					textarea 	{ border: 1px solid $light-gray; resize: none; padding: 20px; }
-					button 		{ @extend .btn,.btn-primary; margin-right: 15px; }
-				}
-			}
-
-			//target specific comments
-			> li.comment 		{ background-color: $white-back;  margin-bottom: 50px;
-				.children 		{ 
-					li.comment 	{ background-color: $white;  }
-				}
-			}
-		}
-
-		/* Comment Form */
-		#respond 				{ 
-			input, textarea 	{ padding: 10px 20px; }
-			
-			.comment-input 		{ float: left; margin-right: 2%; margin-bottom: 30px; width: 32%; 
-				&.comment-form-url	{ margin-right: 0; }
-				input 			{ width: 100%; }
-
-				@media (max-width: $screen-sm-max)  { float: none; margin-right: 0; width: 100%; }
-			}
-
-			.comment-form-comment { clear: left; width: 100%;
-				textarea 		{ border: 1px solid $light-gray; resize: none; width: 100%; }
-			}
-
-			#submit 			{ @extend .btn,.btn-primary; }
-		}
-	}
-}
-
-
-
