Setup basic game area and tool layout. Have simple tile color painting working

--- a/gulp/scss/powderkeg/global/_helpers.scss
+++ b/gulp/scss/powderkeg/global/_helpers.scss
@@ -65,6 +65,8 @@
 .modal-open					{ overflow: auto; }
 
 .setup-background			{ background-position: center center; background-size: cover; background-repeat: no-repeat; }
+.contain-background			{ background-position: center center; background-size: contain; background-repeat: no-repeat; }
+
 
 //https://maximilianhoffmann.com/posts/better-font-rendering-on-osx
 //light on dark aliasing
