--- a/gulp/scss/powderkeg/site/_pages.scss
+++ b/gulp/scss/powderkeg/site/_pages.scss
@@ -76,9 +76,54 @@
 		}
 	}
 
-	#party-gamearea 			{ width: 640px; overflow: auto;
-
+	#party-gamearea 			{ width: 640px; overflow: hidden; display: flex; flex-direction: column;
+		#gamearea-map-wrapper 	{ overflow-x: scroll; }
+		#gamearea-map 			{ height: 320px; width: 960px; display: flex; flex-wrap: wrap; overflow: hidden; }
+		.tile 					{ border: 1px solid $almost-black; height: 32px; width: 32px; }
 	}
+
+	#dm-tools 					{ flex: 1; overflow-y: scroll; padding: 30px 0;
+
+		.dm-tool 				{ margin-bottom: 30px;
+			h6 					{ font-weight: bold; margin-bottom: 10px; line-height: 1.2; }
+			.dm-holder 			{ display: flex;
+
+				.dm-tile		{ cursor: pointer; width: 32px; height: 32px; margin: 0.5rem;
+					img,
+					input 		{ max-width: 100%; height: 32px; width: 32px; }
+					
+					&.active 	{ box-shadow: 0px 0px 6px rgba(0,0,0,0.8); }
+				}
+			}
+		}
+
+		
+		#tool-select 			{ 
+			.tool 				{ width: 32px; height: 32px; text-align: center; padding: 0.5rem; margin: 0.5rem;
+				&.active,
+				&:hover 		{ background-color: #fcfcb6; }
+
+				i 				{ display: block; font-size: 2rem; }
+			}
+		}
+
+		#npc-area 				{ 
+			
+			#npc-holder 		{ 
+				.npc 			{
+					img 		{  }
+				}
+			}
+		}
+
+		#dm-tile-area 			{ 
+			.dm-tile			{
+				img 			{ }
+			}
+		}
+	}
+
+	
 }
 
 
