--- a/gulp/scss/styles.scss
+++ b/gulp/scss/styles.scss
@@ -25,6 +25,9 @@
 @import "./powderkeg/global/helpers";
 @import "./powderkeg/global/gravity-forms";
 @import "./powderkeg/global/print";
+
+@import "./powderkeg/global/sprites";
+
 @import "./powderkeg/common/typography";
 @import "./powderkeg/common/buttons";
 @import "./powderkeg/common/forms";
@@ -49,4 +52,3 @@
 @import "./powderkeg/site/sitewide";
 @import "./powderkeg/site/navigation";
 @import "./powderkeg/site/pages";
-
