--- a/wp-content/themes/gathering/styles/dev.css
+++ b/wp-content/themes/gathering/styles/dev.css
@@ -11755,7 +11755,78 @@ span.right-spacer {
     display: none !important; } }
 
 /* FireFox */
-@-moz-document url-prefix() {}/* FONTS */
+@-moz-document url-prefix() {}.sprite {
+  display: inline-block;
+  overflow: hidden;
+  background-repeat: no-repeat;
+  background-image: url("/wp-content/themes/gathering/images/terrain_spritesheet.png"); }
+
+.dirt01 {
+  width: 64px;
+  height: 64px;
+  background-position: -0px -0px; }
+
+.dirt02 {
+  width: 64px;
+  height: 64px;
+  background-position: -64px -0px; }
+
+.grass01 {
+  width: 64px;
+  height: 64px;
+  background-position: -128px -0px; }
+
+.grass02 {
+  width: 64px;
+  height: 64px;
+  background-position: -192px -0px; }
+
+.stone01 {
+  width: 64px;
+  height: 64px;
+  background-position: -256px -0px; }
+
+.stone02 {
+  width: 64px;
+  height: 64px;
+  background-position: -320px -0px; }
+
+.stone03 {
+  width: 64px;
+  height: 64px;
+  background-position: -384px -0px; }
+
+.stone04 {
+  width: 64px;
+  height: 64px;
+  background-position: -448px -0px; }
+
+.wall01 {
+  width: 64px;
+  height: 64px;
+  background-position: -512px -0px; }
+
+.wall02 {
+  width: 64px;
+  height: 64px;
+  background-position: -576px -0px; }
+
+.wall03 {
+  width: 64px;
+  height: 64px;
+  background-position: -640px -0px; }
+
+.rock01 {
+  width: 64px;
+  height: 64px;
+  background-position: -704px -0px; }
+
+.rock02 {
+  width: 64px;
+  height: 64px;
+  background-position: -768px -0px; }
+
+/* FONTS */
 h1, h2, h3, h4, h5, h6 {
   color: black;
   font-family: "Lato", sans-serif;
@@ -12420,6 +12491,7 @@ blockquote {
     #party-page #dm-tools .dm-tool {
       margin-bottom: 30px; }
       #party-page #dm-tools .dm-tool h6 {
+        font-size: 2rem;
         font-weight: bold;
         margin-bottom: 10px;
         line-height: 1.2; }
@@ -12429,7 +12501,7 @@ blockquote {
           cursor: pointer;
           width: 32px;
           height: 32px;
-          margin: 0.5rem; }
+          margin: 5px 5px 5px 0; }
           #party-page #dm-tools .dm-tool .dm-holder .dm-tile img,
           #party-page #dm-tools .dm-tool .dm-holder .dm-tile input {
             max-width: 100%;
@@ -12437,17 +12509,39 @@ blockquote {
             width: 32px; }
           #party-page #dm-tools .dm-tool .dm-holder .dm-tile.active {
             box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.8); }
+      #party-page #dm-tools .dm-tool .form-group label {
+        font-size: 1.5rem;
+        font-weight: bold; }
+      #party-page #dm-tools .dm-tool .form-group input {
+        border: 0;
+        font-size: 1.5rem;
+        font-weight: bold;
+        line-height: 2;
+        padding: 0; }
+      #party-page #dm-tools .dm-tool .form-group input[type=text] {
+        padding-left: 10px; }
+      #party-page #dm-tools .dm-tool .form-group input[type=color] {
+        border: none;
+        cursor: pointer;
+        width: 32px;
+        height: 32px;
+        -webkit-appearance: none; }
+        #party-page #dm-tools .dm-tool .form-group input[type=color]::-webkit-color-swatch-wrapper {
+          padding: 0; }
+        #party-page #dm-tools .dm-tool .form-group input[type=color]::-webkit-color-swatch {
+          border: none; }
     #party-page #dm-tools #tool-select .tool {
       width: 32px;
       height: 32px;
       text-align: center;
-      padding: 0.5rem;
-      margin: 0.5rem; }
+      padding: 0.5rem; }
       #party-page #dm-tools #tool-select .tool.active, #party-page #dm-tools #tool-select .tool:hover {
         background-color: #fcfcb6; }
       #party-page #dm-tools #tool-select .tool i {
         display: block;
         font-size: 2rem; }
+    #party-page #dm-tools #dm-tile-area #current-tile {
+      display: inline-block; }
 
 /**
  * DEFAULT PAGES
