--- a/gulp/scss/powderkeg/site/_pages.scss
+++ b/gulp/scss/powderkeg/site/_pages.scss
@@ -26,6 +26,10 @@
 /**
  * SINGLE PARTY PAGE
  */
+body.single-parties 			{ overflow: hidden;
+
+}
+
 #party-page 					{ display: flex; height: 100vh;
 
 	#party-sidebar 				{ background-color: $almost-black; color: $graaay; padding: 15px; height: 100vh; overflow: auto; width: 220px;
@@ -76,15 +80,15 @@
 		}
 	}
 
-	#party-gamearea 			{ width: 640px; overflow: hidden; display: flex; flex-direction: column;
+	#party-gamearea 			{ width: 50%; overflow: hidden; display: flex; flex-direction: column;
 		
-		#gamearea-map-wrapper 	{ overflow-x: scroll; }
-		#gamearea-map 			{ height: 320px; width: 960px; display: flex; flex-wrap: wrap; overflow: hidden; }
+		#gamearea-map-wrapper 	{ background-color: $light-gray; height: 100%; width: 100%; overflow: auto; }
+		#gamearea-map 			{ height: 1160px; width: 1160px; padding: 100px; display: flex; flex-wrap: wrap; overflow: hidden; }
 		.tile 					{ border: 1px solid $almost-black; height: 32px; width: 32px; }
 	}
 
 	#dm-tools 					{ flex: 1; overflow-y: scroll; padding: 30px 0;
-
+		
 		.dm-tool 				{ margin-bottom: 30px;
 			h6 					{ font-size: 2rem; font-weight: bold; margin-bottom: 10px; line-height: 1.2; }
 			.dm-holder 			{ display: flex;
@@ -119,12 +123,16 @@
 
 		
 		#tool-select 			{ 
-			.tool 				{ width: 32px; height: 32px; text-align: center; padding: 0.5rem; 
+			.tool 				{ cursor: pointer; width: 32px; height: 32px; text-align: center; padding: 0.5rem; 
 				&.active,
-				&:hover 		{ background-color: #fcfcb6; }
+				&:hover 		{ background-color: #98c4f3; }
 
 				i 				{ display: block; font-size: 2rem; }
 			}
+		}
+
+		#current-tile 			{ width: 32px; height: 32px; display: inline-block;
+
 		}
 
 		#npc-area 				{ 
@@ -136,16 +144,6 @@
 			}
 		}
 
-		#dm-tile-area 			{ 
-
-			#current-tile 		{ display: inline-block;
-
-			}
-
-			.dm-tile			{
-				img 			{ }
-			}
-		}
 	}
 
 	
