--- a/gulp/scss/powderkeg/site/_pages.scss
+++ b/gulp/scss/powderkeg/site/_pages.scss
@@ -84,7 +84,13 @@ body.single-parties 			{ overflow: hidden;
 		
 		#gamearea-map-wrapper 	{ background-color: $light-gray; height: 100%; width: 100%; overflow: auto; }
 		#gamearea-map 			{ height: 1160px; width: 1160px; padding: 100px; display: flex; flex-wrap: wrap; overflow: hidden; }
-		.tile 					{ border: 1px solid $almost-black; height: 32px; width: 32px; }
+		.tile 					{ border: 1px solid $almost-black; height: 32px; width: 32px;
+			&:before 			{ content: ''; display: block; width: 32px; height: 32px; }
+
+			&.highlight 		{ 
+				&:before 		{ @include jbhighlight(); }
+			}
+		}
 	}
 
 	#dm-tools 					{ flex: 1; overflow-y: scroll; padding: 30px 0;
