Using path class to represent path rather than a highlight

--- a/gulp/scss/powderkeg/site/_pages.scss
+++ b/gulp/scss/powderkeg/site/_pages.scss
@@ -96,6 +96,10 @@ body.single-parties 			{ overflow: hidden;
 			&.highlight 		{ 
 				&:before 		{ @include jbhighlight(); }
 			}
+
+			&.path 				{
+				&:before 		{ background-color: rgba(255,0,0,0.5); }
+			}
 		}
 
 		.npc 					{ @include center(); background-color: #98c4f3; border: 2px dotted $almost-black; border-radius: 50%; width: 32px; height: 32px;
