--- a/gulp/scss/powderkeg/site/_sitewide.scss
+++ b/gulp/scss/powderkeg/site/_sitewide.scss
@@ -1,5 +1,5 @@
 /* SITE WIDE */   
-html, body					{ width: 100%; display:block; margin: 0; }
+html, body					{ width: 100%; height: 100%; display:block; margin: 0; }
 html 						{ position: relative; /* font-size: $root-font-size; */ }
 body 						{ 	background-color: $body-color; 
 								overflow-y:scroll; 
@@ -114,18 +114,22 @@ blockquote 					{ background: #f1f1f1; border-left: 10px solid $upgrayddd; margi
 	span 					{ background-color: $gold; color: $white; }
 }
 
-.logo 						{ float: left; width: 50px; height: 50px; }
 
-.tagline 					{ float: left; margin-left: 20px;
-	p 						{ font-weight: bold; margin: 0; line-height: 1; }
-	span 					{ font-size: 1.4rem; }
-}
+
+
 
 /**
  * FOOTER
  */
 #footer 					{ 
 	.container 				{ padding: 50px 15px 20px; }
+
+	.logo 					{ float: left; width: 50px; height: 50px; }
+
+	.tagline 				{ float: left; margin-left: 20px;
+		p 					{ font-weight: bold; margin: 0; line-height: 1; }
+		span 				{ font-size: 1.4rem; }
+	}
 
 	.social 				{ text-align: right;
 		a 					{ font-size: 3rem; display: inline-block; }
